--- a/02-composition-1/claim.yaml
+++ b/02-composition-1/claim.yaml
@@ -4,3 +4,6 @@ metadata:
   name: 2023-08-09-blut-bucket-name
   namespace: default
 spec: {}
+#  notificationEvents:
+#    - s3:ObjectCreated:*
+#    - s3:ObjectRemoved:*
